# badapple-rs

./: .gitignore  Cargo.toml  LICENSE  flake.nix
src/: main.rs  output.rs  pulseaudio.rs
